syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.moirae.rosettaflow.grpc.service";
option java_outer_classname = "IdentityDataProto";
package types;

import "lib/common/base.proto";

option go_package = "github.com/RosettaFlow/Carrier-Go/lib/types";

// IdentityData represents the stored data structure.
message IdentityPB {
  string identity_id = 1;
  string node_id = 2;
  string node_name = 3;
  string data_id = 4;
  // N means normal, D means deleted
  api.protobuf.DataStatus data_status = 5;
  // Y : normal, N non-normal
  api.protobuf.CommonStatus status = 6;
  // json format for credential
  string credential = 7;
  // v 3.0
  uint64 update_at = 8;         // UTC毫秒数
  // the link of face image (with a length limit)
  string image_url = 9;
  // description of the node (with a length limit)
  string details = 10;
}